# SenHarness

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  README_zh-CN.md  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_channel_multi_agent_routing.py  0003_channel_layered_binding.py
backend/app/: __init__.py  admin.py  main.py
backend/app/agents/: agent_factory.py  auxiliary_client.py  prompts.py
backend/app/agents/builtin/: __init__.py  evolver_agent.py
backend/app/agents/harness/: approvals.py  coding.py  context.py  embedder.py  evaluator.py  iteration_budget.py  mcp_runtime.py  memory.py  planner.py  plugin_host.py  reliability.py  sandbox.py  shields.py  skills.py  subagents.py  todos.py
backend/app/agents/kernels/: base.py  deps.py  warmup.py  (+6 more)
backend/app/api/: deps.py  exception_handlers.py  helpers.py  router.py
backend/app/core/: cache.py  config.py  email_verification_gate.py  errors.py  i18n.py  logging.py  middleware.py  oauth.py  observability.py  pricing.py  prometheus.py  rate_limit.py  security.py  sso.py  url_safety.py
backend/app/db/: base.py  mixins.py  repository.py  session.py
backend/app/jobs/: __init__.py  _breaker.py  agent_profile_update.py  approval_ttl.py  curator.py  evolver.py  hub_auto_pull.py  inflight_recovery.py  insights.py  judge.py  notification.py  pending_memory.py  retention.py  skill_telemetry.py  skill_verify.py  subagent_zombie.py  user_modeling.py
backend/app/repositories/: agent.py  agent_profile.py  approval.py  audit.py  backend_adapter.py  batch.py  channel.py  channel_link.py  department.py  flow.py  gateway.py  governance.py  hub_skill_pack.py  identity.py  inflight_run.py  job_run.py  judge_verdict.py  logical_thread.py  mcp.py  memory.py  message_rating.py  metrics.py  notification.py  pending_memory.py  plugin_registry.py  project_board.py  provider.py  search_provider.py  session.py  session_artifact.py  session_goal.py  session_share.py  skill_lineage_edge.py  skill_pack_version.py  skill_usage.py  skills.py  squad.py  subagent_run.py  user_profile.py  workspace.py
backend/app/schemas/: _base.py  agent.py  agent_profile.py  approval.py  attachment.py  audit.py  auth.py  backend.py  batch.py  channel.py  curator.py  department.py  flow.py  governance.py  hub_skill.py  identity.py  insights.py  judge_verdict.py  kb_source.py  knowledge.py  lineage.py  logical_thread.py  mcp.py  memory.py  memory_profile.py  message_rating.py  metrics.py  notification.py  onboarding.py  pending_memory.py  project_board.py  provider.py  provider_catalog.py  search_provider.py  secret.py  served_model.py  session.py  session_artifact.py  session_goal.py  session_share.py  (+11 more)
backend/app/security/: crypto.py
backend/app/services/: admin.py  agent.py  agent_profile.py  agent_runner.py  agent_runtime.py  approval.py  approval_dispatch.py  attachment.py  audit.py  auth.py  backend_adapter.py  batch.py  cache_adaptive.py  cache_control.py  channel.py  channel_binding.py  channel_dispatch.py  channel_routing.py  channel_runtime.py  cross_session_insights.py  email_transport.py  email_verification.py  evolver_config.py  evolver_workflow.py  flow.py  flow_engine.py  gateway.py  gc.py  governance.py  hub_promote_pipeline.py  hub_pull_push.py  hub_skill.py  inflight_run.py  job_run.py  judge.py  kb_source.py  knowledge.py  lineage_replay.py  logical_thread.py  mcp.py  (+54 more)
backend/app/worker/: arq_app.py  arq_middleware.py  queue.py
backend/app/workflows/: leader.py  scheduler.py
backend/cli/: commands.py
backend/example_plugins/echo_logger/: __init__.py  entry.py  plugin.yaml
backend/example_plugins/example_channel_plugin/: __init__.py  entry.py  plugin.yaml
backend/scripts/: README.md
backend/scripts/dev/: migrate_skills_to_db.py  seed_scenarios.py
backend/scripts/legacy/: a1_verify_bulk_approvals.py  a2_a3_verify.py  a4_verify.py  b1_verify.py  b2_c2_verify.py  d10_verify_refresh.py  d12_verify_profile_members.py  d13_verify_skills_memory.py  d14_verify_flow_engine.py  d15_verify_attachments.py  d16_verify_admin.py  d17_verify_hitl.py  d18_verify_openclaw.py  d20_verify_keyring.py  d21_verify_batch.py  d4_verify_channels_flows_rag.py  d5_inspect.py  d5_verify_fix.py  d7_verify_cost_rollup.py  d7_verify_usage.py  d8_verify_marketplace.py  d9_verify_audit.py  fu_im_mfa_verify.py
backend/scripts/ops/: entrypoint.sh
backend/scripts/probes/: probe_shields.py  test_approval.py  test_approval_deny.py  test_approval_rest.py  test_perm_matrix.py  test_sandbox.py  test_sandbox_runner.py
backend/sdk/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: test_agents_runtimes.py  test_approval_full_loop.py  test_artifact_captured_on_ws.py  test_auth_flow.py  test_board_cascade_on_workspace_delete.py  test_build_skills_capability_with_cap.py  test_delegate_batch_hallucination.py  test_dispatch_inbound_cross_platform.py  test_email_transport_reload.py  test_emit_event_full_path.py  test_grandfather_migration.py  test_hallucination_full_loop.py  test_health.py  test_hub_promotion_full_loop.py  test_insights_slash_command_dispatch.py  test_job_runs_retention.py  test_lineage_migration_backfill.py  test_mcp_sse_transport.py  test_message_history_invariant.py  test_platform_settings_env_bootstrap.py  test_platform_settings_service.py  test_plugin_load_with_signing.py  test_preview_promotion.py  test_promote_at_capture.py  test_runner_cache_annotation.py  test_runner_failover.py  test_runner_plugin_hooks.py  test_runner_served_name_audit.py  test_session_ws_lost_runs.py  test_skill_injection_end_to_end.py  test_skill_injection_failure_safe.py  test_skill_state_migration.py  test_skill_usage_retention.py  test_skill_version_migration.py  test_skills_import.py  test_ssh_sandbox_command_e2e.py  test_vault_private_key_resolution.py  test_workspace_agent_crud.py
(+1014 files in other folders)
