[project]
name = "senharness-backend"
version = "0.1.0"
description = "SenHarness — Multi-agent operating system for enterprises (backend)"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "SenHarness Contributors" }]

dependencies = [
  # ─── Web ─────────────────────────────────────────────────
  "fastapi[standard]>=0.117.0",
  "uvicorn[standard]>=0.34.0",
  "starlette>=0.41.0",
  "python-multipart>=0.0.20",
  "httpx>=0.28.0",
  "websockets>=13.0",

  # ─── Settings / validation ──────────────────────────────
  "pydantic>=2.11.0",
  "pydantic-settings>=2.7.0",
  "email-validator>=2.2.0",
  "typing-extensions>=4.12.0",

  # ─── Database ───────────────────────────────────────────
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "pgvector>=0.3.6",

  # ─── Cache / workers ────────────────────────────────────
  "redis>=5.2.0",
  "arq>=0.26.3",
  "apscheduler>=3.10.4",

  # ─── Security ───────────────────────────────────────────
  "bcrypt>=4.2.0",
  "pyjwt[crypto]>=2.10.0",
  "cryptography>=44.0.0",
  "argon2-cffi>=23.1.0",

  # ─── Agent layer (pydantic-ai ecosystem) ────────────────
  "pydantic-ai>=1.84.0",
  "pydantic-ai-harness[code-mode]>=0.1.2",    # CodeMode (Monty sandbox)
  "summarization-pydantic-ai>=0.1.4",         # context compression (P2)
  "subagents-pydantic-ai>=0.2.2",             # sub-agent delegation (P2)
  "pydantic-ai-skills>=0.8.0",                # SKILL.md packs (P2)
  "pydantic-ai-todo>=0.2.1",                  # TodoStore (P2)
  "pydantic-ai-middleware>=0.2.4",            # 11-hook plugin host (P3)
  "pydantic-ai-shields>=0.3.1",               # ToolGuard + PII/injection/secret guards + cost tracking (D3)
  "pydantic-ai-backend>=0.2.5",               # Console toolset + DockerSandbox (D2)
  "docker>=7.1.0",                            # Docker SDK required by DockerSandbox
  "chardet>=5.2.0",                           # Encoding detection for Console read_file
  # Phase 4+ additions (uncomment as wired):
  # "pydantic-ai-channels>=0.1",             # IM gateways (Slack/Feishu/etc.)

  # ─── Observability ──────────────────────────────────────
  "logfire>=3.0.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.50b0",

  # ─── Misc ──────────────────────────────────────────────
  "python-slugify>=8.0.4",
  "orjson>=3.10.0",
  "tenacity>=9.0.0",
  "rich>=13.9.0",
  "click>=8.1.7",
  "authlib>=1.3.2",

  # ─── Builtin tools ──────────────────────────────────────
  "ddgs>=9.0.0",                  # web_search fallback (no key)
  "trafilatura>=2.0.0",           # web_fetch HTML→markdown
  "pypdf>=5.0.0",                 # PDF text extraction (B1)
  "sqladmin>=0.20.0",             # internal-ops DB browser (B3)
  "itsdangerous>=2.2.0",          # starlette SessionMiddleware for SQLAdmin + OAuth state
  "pyotp>=2.9.0",                 # TOTP 2FA (fu-oauth-mfa)
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "ty>=0.0.1a9",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.0",
  "faker>=33.0.0",
]

# ─── Cloud KMS adapters (D20) ────────────────────────────
# Each extra installs only the SDK its Keyring provider needs, so deploys
# that use Env / File / Passphrase keyrings don't balloon their image size.
kms-aws = [
  "boto3>=1.35.0",
]
kms-gcp = [
  "google-cloud-kms>=3.0.0",
]
kms-azure = [
  "azure-identity>=1.19.0",
  "azure-keyvault-keys>=4.9.0",
]
kms-vault = [
  "hvac>=2.3.0",
]
kms-all = [
  "boto3>=1.35.0",
  "google-cloud-kms>=3.0.0",
  "azure-identity>=1.19.0",
  "azure-keyvault-keys>=4.9.0",
  "hvac>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

# ─── Ruff ──────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "cli", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

# ─── Pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning:passlib.*",
]

# ─── Coverage ──────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]

# ─── ty ────────────────────────────────────────────────────
[tool.ty]
