[project]
name = "senharness-backend"
version = "0.1.0"
description = "SenHarness — Multi-agent operating system for enterprises (backend)"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "SenHarness Contributors" }]

dependencies = [
  # ─── Web ─────────────────────────────────────────────────
  "fastapi[standard]>=0.117.0",
  "uvicorn[standard]>=0.34.0",
  "starlette>=0.41.0",
  "python-multipart>=0.0.20",
  "httpx>=0.28.0",
  "websockets>=13.0",

  # ─── Settings / validation ──────────────────────────────
  "pydantic>=2.11.0",
  "pydantic-settings>=2.7.0",
  "email-validator>=2.2.0",
  "typing-extensions>=4.12.0",

  # ─── Database ───────────────────────────────────────────
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "pgvector>=0.3.6",

  # ─── Cache / workers ────────────────────────────────────
  "redis>=5.2.0",
  "arq>=0.26.3",
  "apscheduler>=3.10.4",

  # ─── Security ───────────────────────────────────────────
  "bcrypt>=4.2.0",
  "pyjwt[crypto]>=2.10.0",
  "cryptography>=44.0.0",
  "argon2-cffi>=23.1.0",

  # ─── Agent layer (pydantic-ai ecosystem) ────────────────
  "pydantic-ai>=1.84.0",
  "pydantic-ai-harness[code-mode]>=0.1.2",    # CodeMode (Monty sandbox)
  "summarization-pydantic-ai>=0.1.4",         # context compression (P2)
  "subagents-pydantic-ai>=0.2.2",             # sub-agent delegation (P2)
  "pydantic-ai-skills>=0.8.0",                # SKILL.md packs (P2)
  "pydantic-ai-todo>=0.2.1",                  # TodoStore (P2)
  "pydantic-ai-middleware>=0.2.4",            # 11-hook plugin host (P3)
  "pydantic-ai-shields>=0.3.1",               # ToolGuard + PII/injection/secret guards + cost tracking (D3)
  "pydantic-ai-backend>=0.2.5",               # Console toolset + DockerSandbox (D2)
  "docker>=7.1.0",                            # Docker SDK required by DockerSandbox
  "chardet>=5.2.0",                           # Encoding detection for Console read_file
  # Phase 4+ additions (uncomment as wired):
  # "pydantic-ai-channels>=0.1",             # IM gateways (Slack/Feishu/etc.)

  # ─── Observability ──────────────────────────────────────
  "logfire>=3.0.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.50b0",

  # ─── Misc ──────────────────────────────────────────────
  "python-slugify>=8.0.4",
  "orjson>=3.10.0",
  "tenacity>=9.0.0",
  "rich>=13.9.0",
  "click>=8.1.7",
  "authlib>=1.3.2",

  # ─── Builtin tools ──────────────────────────────────────
  "ddgs>=9.0.0",                  # web_search fallback (no key)
  "trafilatura>=2.0.0",           # web_fetch HTML→markdown
  "pypdf>=5.0.0",                 # PDF text extraction (B1)
  "python-docx>=1.1.0",           # DOCX (Word) text extraction
  "openpyxl>=3.1.0",              # XLSX (Excel) text extraction
  "sqladmin>=0.20.0",             # internal-ops DB browser (B3)
  "itsdangerous>=2.2.0",          # starlette SessionMiddleware for SQLAdmin + OAuth state
  "pyotp>=2.9.0",                 # TOTP 2FA (fu-oauth-mfa)
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "ty>=0.0.1a9",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.0",
  "faker>=33.0.0",
]

# ─── Outbound email (M0.13) ─────────────────────────────
# When the platform admin enables email.smtp in /admin/settings the
# notification fan-out switches to the SMTP transport which depends
# on aiosmtplib. Deploys that stay on the LogEmailTransport (the
# default) don't need this extra installed.
email = [
  "aiosmtplib>=3.0.0",
]

# ─── MCP transports (M2.5.4) ─────────────────────────────
# Optional — the catalogue + DB rows ship in the base install, but
# spawning real ``stdio`` / ``sse`` / ``streamable_http`` clients
# requires the official MCP SDK. Deploys that don't enable MCP keep
# working without this extra; the M2.5.4 client raises
# ``mcp.sdk_unavailable`` (translated to a graceful audit row) when
# a server row exists but the SDK is missing.
mcp = [
  "mcp>=1.19.0",
]

# ─── Cloud KMS adapters (D20) ────────────────────────────
# Each extra installs only the SDK its Keyring provider needs, so deploys
# that use Env / File / Passphrase keyrings don't balloon their image size.
kms-aws = [
  "boto3>=1.35.0",
]
kms-gcp = [
  "google-cloud-kms>=3.0.0",
]
kms-azure = [
  "azure-identity>=1.19.0",
  "azure-keyvault-keys>=4.9.0",
]
kms-vault = [
  "hvac>=2.3.0",
]
kms-all = [
  "boto3>=1.35.0",
  "google-cloud-kms>=3.0.0",
  "azure-identity>=1.19.0",
  "azure-keyvault-keys>=4.9.0",
  "hvac>=2.3.0",
]

# ─── SSH sandbox backend (M2.5.10) ───────────────────────
# Optional remote-execution backend (``sandbox.kind = "ssh"``). Off by
# default at every layer: the dependency is opt-in, the platform admin
# must flip ``security.sandbox.allow_ssh_backend`` before any workspace
# can wire it, every command runs through the standard approval queue,
# and ``known_hosts_pin`` is mandatory. See ``docs/deployment.md``
# (Agent sandbox → SSH backend) for the threat model.
ssh-sandbox = [
  "asyncssh>=2.14.0",
]

# ─── User-level plugin signing (M3.9) ────────────────────
# Required when ``platform_settings.plugins.allow_user_plugins=True``
# AND a non-empty ``signing_root_pubkey`` is configured. Deployments
# that keep the master switch off (the shipping default per design
# principle 7) never need this extra. Dev mode (``allow_unapproved_plugins
# =True``) also bypasses signature verification, so PyNaCl is only
# pulled when production-grade plugin trust is in play.
plugin-signing = [
  "pynacl>=1.5.0",
]

# ─── IM channel stream-mode SDKs ─────────────────────────
# Each entry adds a transport so the matching provider (feishu / lark /
# dingtalk / wecom / discord / qq) can run without a public IP. Every
# SDK is MIT-licensed; see backend/NOTICES.md for the per-SDK
# attribution. Channels keep working in webhook mode without these.
channels-stream = [
  "lark-oapi>=1.5.5,<2.0",            # Feishu / Lark WebSocket (lark_oapi.ws)
  "qq-botpy>=1.2.1",                  # Tencent QQ open-platform Gateway
  "dingtalk-stream>=0.24.3",          # DingTalk Stream Mode
  "wecom-aibot-sdk-python>=0.1.7,<0.2", # WeCom AIBot WSS (community 0.1.x)
  "discord.py>=2.7.1",                # Discord Gateway
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

# ─── Ruff ──────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "cli", "tests"]
extend-exclude = [
  "alembic/versions",
  "scripts/legacy",
  "scripts/probes",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20", "SIM", "RUF"]
ignore = [
  "E501",     # line too long (handled by formatter / line-length budget)
  "B008",     # function call as default argument (FastAPI Depends pattern)
  "T201",     # print() statements (CLI tools / scripts use them)
  "E402",     # module-level imports not at top (conditional imports common)
  "RUF001",   # ambiguous unicode in strings (Chinese i18n copy)
  "RUF002",   # ambiguous unicode in docstrings
  "RUF003",   # ambiguous unicode in comments
  "SIM",      # simplify suggestions (opinionated, large pre-existing surface)
  "C4",       # comprehension rewrites (opinionated)
  "UP046",    # non-PEP-695 generic class (mass migration deferred)
  "N818",     # exception-Error suffix (legacy class names; gradual rename)
  "N806",     # non-lowercase var in function (pydantic-ai compat shims)
  "N803",     # invalid argument name
  "RUF012",   # mutable class default (pydantic field pattern)
  "RUF059",   # unused unpacked variable
  "B007",     # unused loop control variable
  "B017",     # assert raises broad Exception (in tests)
  "B023",     # function uses loop variable (latent: protocol_kernel.py:223-233)
  "B905",     # zip without explicit strict=
]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

# ─── Pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
markers = [
  "requires_db: test transitively uses a Postgres/Redis fixture; auto-applied by conftest and deselected on the GitHub Actions backend-test job (which runs `pytest -m 'not requires_db'`). Run the full suite locally via `make test`.",
]
filterwarnings = [
  "ignore::DeprecationWarning:passlib.*",
]

# ─── Coverage ──────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]

# ─── ty ────────────────────────────────────────────────────
[tool.ty]
